# nebula-chess1

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: deps.py  main.py  models.py  schemas.py
backend/app/api/routes/: auth.py  games.py  health.py  puzzles.py  tournaments.py  users.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/services/: anti_cheat.py  chess_service.py  redis_pubsub.py  room_manager.py  stockfish_service.py
backend/migrations/: 0001_initial.sql
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: Board.tsx  Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AnalysisPage.tsx  GamePage.tsx  LeaderboardPage.tsx  Lobby.tsx  ProfilePage.tsx  SettingsPage.tsx
frontend/src/styles/: index.css
nginx/: nginx.conf
