[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula-chess-backend"
version = "0.1.0"
description = "Nebula Chess backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.3.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[argon2]>=1.7.4",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "python-chess>=1.999",
  "prometheus-client>=0.20.0",
  "orjson>=3.10.0",
  "email-validator>=2.1.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
